[Rohan | Nikhilesh] Fixes subheading misalignment

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -113,8 +113,8 @@ sup {
 img {
   border-style: none;
   max-width: 100%;
-  margin-left: 1.45rem;
-  margin-right: 1.45rem;
+  margin-left: 0;
+  margin-right: 0;
   margin-top: 0;
   padding-bottom: 0;
   padding-left: 0;
